# Sorting

./: CMakeLists.txt  README.md  main.c  makeAndRun.sh
src/: tryby.c  tryby.h
src/HeapSort/: HeapSort.c  HeapSort.h
src/InsertionSort/: InsertSort.c  InsertSort.h
src/QuickSort/Iterative/: QuickSortIterative.c  QuickSortIterative.h
src/QuickSort/Recursive/: QuickSortRecursive.c  QuickSortRecursive.h
src/SelectionSort/: SelectSort.c  SelectSort.h  readme.md
src/ShellSort/: ShellSort.c  ShellSort.h
